Revert "Management testing"