@@ -1,6 +1,5 @@
 plugins {
     kotlin("jvm")
-    id("org.springframework.boot")
 }
 
 group = "ut.isep"
@@ -11,23 +10,13 @@ repositories {
 }
 
 dependencies {
-    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0")
     testImplementation("org.jetbrains.kotlin:kotlin-test")
-    testImplementation("org.assertj:assertj-core:3.24.2")
-    testImplementation("org.junit.jupiter:junit-jupiter-engine")
-    testImplementation("org.junit.jupiter:junit-jupiter-api")
-    testImplementation("com.ninja-squad:springmockk:4.0.2")
-    testImplementation("org.springframework.boot:spring-boot-starter-test:3.1.4") {
-        exclude("org.junit.vintage:junit-vintage-engine")
-        exclude("org.mockito:mockito-core")
-    }
-    testImplementation(kotlin("test"))
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0")
 }
 
 
 tasks.test {
     useJUnitPlatform()
-    jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
 }
 kotlin {
     jvmToolchain(21)
